--- a/booking/src/main/webapp/resources/css/Lecturelist.css
+++ b/booking/src/main/webapp/resources/css/Lecturelist.css
@@ -1,79 +1,36 @@
-.container {
-        max-width: 100px;
-        max-height: 800px;
-        padding: 20px;
-    }
+.Lecturelist_container {
+	margin: 30px auto;
+	max-width: 1000px;
+}
 
-    .button_box {
-      max-width: 740px;
-      display: flex;
-      justify-content: flex-end;
-      margin-bottom: 5px;
-    }
+.button_box {
+	text-align: right;
+	margin-bottom: 5px;
+}
 
-    .download_btn {
-        height: 38px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        background:#222;
-        color: #f5f7f5;
-        font-weight: bold;
-    }
-    
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
+.toplist_table {
+	width: 1000px;
+}
 
-    table tr th {
-      text-align: center;
-      border-top: 1px solid #ccc;
-      border-bottom: 1px solid #ccc;
-      padding: 12px 0;
-    }
+.top_list {
+	text-align: center;
+	border-bottom: 1px solid #ccc;
+	
+}
 
-    .Attend_class {
-        width: 200px;
-    }
+.NoLecturelist_box {
+	margin: 20px auto;
+	text-align: center;
+}
 
-    .Attend_number {
-        width: 100px;
-    }
+.registration_box {
+	text-align: center;
+}
 
-    td {
-      border: 1px solid #ccc;
-      padding: 12px 0;
-      text-align: center;
-    }
-    
-     tbody tr td span {
-        color: red;
-    }
-    
-    .play_btn {
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      background: #222;
-      color: #f5f7f5;
-      height: 38px;
-      font-weight: bold;
-    }
+.registration_box td {
+	padding: 10px;
+}
 
-    .buttons_box1 {
-      max-width: 740px;
-      display: flex;
-      justify-content: flex-end;
-      margin-bottom: 5px;
-    }
-    
-    .buttons_box1 button {
-        margin: 5px;
-        height: 38px;
-        width: 58px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        background:#222;
-        color: #f5f7f5;
-        font-weight: bold;
-    }
+.bottombtn_box {
+	text-align: right;
+}
